--- a/src/app/Recipe/recipe-list/recipe-list.component.html
+++ b/src/app/Recipe/recipe-list/recipe-list.component.html
@@ -1,32 +1,14 @@
 <div class="row">
-  <div class="col-xl-4">
-    <div>&nbsp;
-      <button class="btn btn-primary">New Recipe</button>
-      <hr />
+  <div class="col-xs-12">
+    <div class="row">
+      <div class="col-xs-12">
+        <button class="btn btn-primary">New Recipe</button>
+      </div>
     </div>
-    <div class="container-fluid" id="list2">
-      <table class="table boarder boarder-primary">
-        <thead style="text-align: center">
-          <th>S.No</th>
-          <th>Recipe Name</th>
-          <th>Recipe</th>
-        </thead>
-        <tbody style="text-align: center" *ngFor="let rlist of rlists">
-          <tr>
-            <td>{{ rlist.sno }}</td>
-            <td>{{ rlist.name }}</td>
-            <td>
-              <img src="{{ rlist.img }}" style="width: 100px; height: 100px" (click)="showDataInManage(rlist)"/>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-
-      {{ message }}
-    </div>
-  </div>
-  &nbsp;&nbsp;
-  <div class="col-xl-6">
-    <app-recipe-detail [data]="dataTochild" (mydata)="message"></app-recipe-detail>
+    <hr>
+    <app-recipe-item
+      *ngFor="let recipe of recipes"
+      [recipe]="recipe" (selectedRecipe) = "onSelect($event)"></app-recipe-item>
   </div>
 </div>
+
