--- a/src/app/Recipe/recipes/recipes.component.html
+++ b/src/app/Recipe/recipes/recipes.component.html
@@ -1,1 +1,16 @@
-<p>recipes works!</p>
+<div class="row">
+  <div class="col-sm-5">
+    <app-recipe-list #listReceipe></app-recipe-list>
+  </div>&nbsp;
+  <div class="col-sm-5">
+    <app-recipe-detail
+  [recipe]="listReceipe.recepe"
+></app-recipe-detail>
+  </div>
+</div>
+
+
+
+
+
+
