--- a/src/app/Shopping/shopping-edit/shopping-edit.component.html
+++ b/src/app/Shopping/shopping-edit/shopping-edit.component.html
@@ -1,25 +1,24 @@
-<p>shopping-edit works!</p>
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form #shoppingForm="ngForm">
       <div class="row">
         <div class="col-sm-3 form-group">
-          &nbsp;
+          &nbsp;&nbsp;
           <label for="name">Name: &nbsp;</label>
-          <input type="text" id="name" class="form-controll" 
-          #nameInput/>
+          <input type="text" id="name" class="form-control" 
+          #nameInput required/>
         </div>
         <div class="col-sm-3 form-group">
-          <label for="number">Amount: &nbsp;</label>
-          <input type="amount" id="amount" class="form-controll" 
-          #amountInput/>
+          <label for="amount">Amount: &nbsp;</label>
+          <input type="number" id="amount" class="form-control" 
+          #amountInput required/>
         </div>
       </div>
       <br /><br />
       <div class="row">
         <div class="col-xs-12">
-          &nbsp;
-          <button type="submit" class="btn btn-success" (click)="onAddItem()">Add</button>&nbsp;
+          &nbsp;&nbsp;
+          <button type="submit" class="btn btn-success" (click)="onAddItem()" >Add</button>&nbsp;
           <button type="button" class="btn btn-danger">Delete Item</button
           >&nbsp;
           <button type="button" class="btn btn-primary">Clear</button>
