--- a/src/app/Shopping/shopping-list/shopping-list.component.html
+++ b/src/app/Shopping/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div>
   <app-shopping-edit
-  (ingradientAdded)="onIngradientAdded($event)"></app-shopping-edit>
+  ></app-shopping-edit>
 </div>
 <hr>
 <br />
