--- a/src/app/Shopping/shopping-edit/shopping-edit.component.html
+++ b/src/app/Shopping/shopping-edit/shopping-edit.component.html
@@ -1,27 +1,35 @@
 <div class="row">
   <div class="col-xs-12">
-    <form #shoppingForm="ngForm">
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-3 form-group">
           &nbsp;&nbsp;
           <label for="name">Name: &nbsp;</label>
           <input type="text" id="name" class="form-control" 
-          #nameInput required/>
+          name="name"
+          ngModel
+          required/>
         </div>
         <div class="col-sm-3 form-group">
           <label for="amount">Amount: &nbsp;</label>
           <input type="number" id="amount" class="form-control" 
-          #amountInput required/>
+           name="amount"
+           ngModel
+           required
+          pattern="^[1-9]+[0-9]*$"/>
         </div>
       </div>
       <br /><br />
       <div class="row">
         <div class="col-xs-12">
           &nbsp;&nbsp;
-          <button type="submit" class="btn btn-success" (click)="onAddItem()" >Add</button>&nbsp;
-          <button type="button" class="btn btn-danger">Delete Item</button
+          <button type="submit" class="btn btn-success" [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add'}}</button>&nbsp;
+          <button type="button" 
+          class="btn btn-danger" 
+          (click)="onDelete()"
+          *ngIf="editMode">Delete Item</button
           >&nbsp;
-          <button type="button" class="btn btn-primary">Clear</button>
+          <button type="button" class="btn btn-primary" (click)=onClear()>Clear</button>
         </div>
       </div>
     </form>
