--- a/src/app/Recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/Recipe/recipe-detail/recipe-detail.component.html
@@ -6,7 +6,7 @@
       </button>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
-        <li><a class="dropdown-item">Edit Recipe</a></li>
+        <li><a class="dropdown-item" (click)="onEditRecipe()">Edit Recipe</a></li>
         <li><a class="dropdown-item">Delete Recipe</a></li>
       </ul>
     </div>
