--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <h2>Recipe Book</h2>
       </div>&nbsp;&nbsp;
       <li class="nav-item">
-        <a class="nav-link" aria-current="page" routerLink="/">Shopping List</a>
+        <a class="nav-link" aria-current="page" routerLink="/shopping-list">Shopping List</a>
       </li>
       &nbsp;&nbsp;
       <li class="nav-item">
