--- a/src/app/Recipe/recipe-list/recipe-list.component.html
+++ b/src/app/Recipe/recipe-list/recipe-list.component.html
@@ -2,13 +2,14 @@
   <div class="col-xs-12">
     <div class="row">
       <div class="col-xs-12">
-        <button class="btn btn-primary">New Recipe</button>
+        <button class="btn btn-primary" (click)="onNewRecipe()">New Recipe</button>
       </div>
     </div>
     <hr>
     <app-recipe-item
-      *ngFor="let recipe of recipes"
-      [recipe]="recipe" (selectedRecipe) = "onSelect($event)"></app-recipe-item>
+      *ngFor="let recipeEl of recipes; let i = index"
+      [recipe]="recipeEl"
+      [index]='i'></app-recipe-item>
   </div>
 </div>
 
