--- a/src/app/Recipe/recipe-edit/recipe-edit.component.html
+++ b/src/app/Recipe/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,79 @@
-<p>hello</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]="recipeForm">
+      <div class="row">
+        <div class="col-xs-12">
+          <button type="submit" class="btn btn-success">Save</button>&nbsp;
+          <button type="button" class="btn btn-danger">Cancel</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Nmae</label>
+            <input type="text" 
+            id="name" 
+            class="form-control" 
+            formControlName="name"/>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imagePath">Image Url</label>
+            <input type="text"
+            id="imagePath"
+            class="form-control"
+            formControlName = "imagePath"/>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <img src="" class="img-responsive" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Discription</label>
+            <textarea
+              type="text"
+              id="discription"
+              class="form-control"
+              formControlName="discription"
+            ></textarea>
+          </div>
+        </div>
+      </div>
+      <br />
+      <div class="row">
+        <div class="col-xs-12" FormArrayName="ingradients">
+          <div class="row"
+          *ngFor="let ingradient of recipeForm.get('ingradients'); let i = index" 
+          [formGroupName]="i">
+            <div class="col-sm-6">
+              <input type="text" 
+              class="form-control"
+              FormControlName="name"/>
+            </div>
+            
+              <div class="col-sm-4">
+                <input type="number" 
+                class="form-control"  
+                FormControlName="amount"
+                />
+              </div>
+            
+            
+              <div class="col-sm-2">
+                <button class="btn btn-danger">X</button>
+              </div>
+            
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
