--- a/src/app/Recipe/recipe-edit/recipe-edit.component.html
+++ b/src/app/Recipe/recipe-edit/recipe-edit.component.html
@@ -1,76 +1,61 @@
 <div class="row">
   <div class="col-xs-12">
-    <form [formGroup]="recipeForm">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>&nbsp;
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
+          <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="name">Nmae</label>
-            <input type="text" 
-            id="name" 
-            class="form-control" 
-            formControlName="name"/>
+            <label for="name">Name</label>
+            <input type="text" id="name" formControlName="name" class="form-control">
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="imagePath">Image Url</label>
-            <input type="text"
-            id="imagePath"
-            class="form-control"
-            formControlName = "imagePath"/>
+            <label for="imagePath">Image URL</label>
+            <input type="text" id="imagePath" formControlName="imagePath" class="form-control" #imagePath>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive" />
+          <img [src]="imagePath.value" class="img-responsive">
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="name">Discription</label>
-            <textarea
-              type="text"
-              id="discription"
-              class="form-control"
-              formControlName="discription"
-            ></textarea>
+            <label for="discription">Description</label>
+            <textarea type="text" id="discription" class="form-control" formControlName="discription"
+              rows="6"></textarea>
           </div>
         </div>
       </div>
-      <br />
       <div class="row">
-        <div class="col-xs-12" FormArrayName="ingradients">
-          <div class="row"
-          *ngFor="let ingradient of recipeForm.get('ingradients'); let i = index" 
-          [formGroupName]="i">
-            <div class="col-sm-6">
-              <input type="text" 
-              class="form-control"
-              FormControlName="name"/>
+        <div class="col-xs-12" formArrayName="ingradients">
+          <div class="row" *ngFor="let ingradientCtrl of recipeForm.get('ingradients').value; let i = index"
+            [formGroupName]="i" style="margin-top: 10px;">
+            <div class="col-xs-8">
+              <input type="text" class="form-control" formControlName="name">
             </div>
-            
-              <div class="col-sm-4">
-                <input type="number" 
-                class="form-control"  
-                FormControlName="amount"
-                />
-              </div>
-            
-            
-              <div class="col-sm-2">
-                <button class="btn btn-danger">X</button>
-              </div>
-            
+            <div class="col-xs-2">
+              <input type="number" class="form-control" formControlName="amount">
+            </div>
+            <div class="col-xs-2">
+              <button type="button" class="btn btn-danger" (click)="onDeleteIngradient(i)">X</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-xs-12">
+              <button type="button" class="btn btn-success" (click)="onAddIngradient()">Add Ingredient</button>
+            </div>
           </div>
         </div>
       </div>
